got built in styles working

--- a/MstatReader.WebUI/Pages/Index.razor
+++ b/MstatReader.WebUI/Pages/Index.razor
@@ -77,33 +77,24 @@
     }
 }
 
-
 <style>
-
-    #grid table {
+    table {
         width: 100%; /* Fill the entire available space */
         table-layout: fixed; /* Keep the columns at their specified widths */
         border-collapse: collapse;
-        font-family: Arial, sans-serif;
+        font-family: 'Cascadia Mono PL',Arial;
     }
 
-    /* Style the table cells */
-    #grid td, #grid th {
+    .quickgrid td, .quickgrid th {
         border: 1px solid #ddd;
         padding: 8px;
         overflow: auto;
     }
 
-    /* Style the table headings */
-    #grid th {
+    .quickgrid th {
         background-color: #eee;
         color: #000;
         font-weight: bold;
         text-align: left;
     }
-
-    #grid button {
-        border: 0px;
-    }
 </style>
-
